# ChangeLog for sys-fs/ext4magic
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/ext4magic/ChangeLog,v 1.14 2014/10/10 11:00:32 ago Exp $

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> ext4magic-0.3.2.ebuild:
  Stable for x86, wrt bug #523466

  09 Oct 2014; Agostino Sarubbo <ago@gentoo.org> ext4magic-0.3.2.ebuild:
  Stable for amd64, wrt bug #523466

*ext4magic-0.3.2 (19 Sep 2014)

  19 Sep 2014; Yixun Lan <dlan@gentoo.org> +ext4magic-0.3.2.ebuild,
  metadata.xml:
  bump per maintainer request, thanks Gokturk Yuksek

  17 Feb 2013; Agostino Sarubbo <ago@gentoo.org> ext4magic-0.3.1-r1.ebuild:
  Stable for x86, wrt bug #457482

  17 Feb 2013; Agostino Sarubbo <ago@gentoo.org> ext4magic-0.3.1-r1.ebuild:
  Stable for amd64, wrt bug #457482

*ext4magic-0.3.1-r1 (05 Jan 2013)

  05 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> -ext4magic-0.3.1.ebuild,
  +ext4magic-0.3.1-r1.ebuild, metadata.xml:
  Revision bump: EAPI 5, add file attribute recovery and debug magic-scan
  engine support through USE-flags, thanks to Gokturk Yuksek. Fix for proper
  USE-flag handling, drop old revision

  19 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> ext4magic-0.3.1.ebuild,
  metadata.xml:
  Add support for debugging and 'expert mode' through USE-flags, thanks to
  gokturk

  24 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Package will be maintained by gokturk through proxy maintainers

*ext4magic-0.3.1 (24 Sep 2012)

  24 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> +ext4magic-0.3.1.ebuild:
  Version bump.

  04 Jul 2012; Samuli Suominen <ssuominen@gentoo.org> ext4magic-0.3.0.ebuild:
  amd64/x86 stable

  03 Jul 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Move to maintainer-needed@ since I don't care about this package anymore.

  04 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -ext4magic-0.2.4.ebuild:
  old

*ext4magic-0.3.0 (04 Mar 2012)
