@@ -1,28 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ext4magic-0.3.0.tar.gz 410590 SHA256 927b7b2c73f9b81a3cbf13a2643c60023b573b6ec24565d02a3bb08abea79985 SHA512 ba31e3b0b1942d8b1c08a81b2a8777bbacb9cc89be60e472b8de6032850b5ddd0a6170863f511658435202f27e701e120adf88257e1789e853cd57f3422d5d45 WHIRLPOOL e65ca9e26bc689e937486f1c35675296d7a5ad578b9db475aa033d01360db39cc983efe620fc7396418362aa12acf5521087e29b54b7829505cdce7e451e64e9
-DIST ext4magic-0.3.1.tar.gz 411237 SHA256 bcf231da889ac702b29d41ff8150a5615936cf1c55da73864da5c35272f37e49 SHA512 078649790071d4463d472fe7149a5fd90ea19eb7d598ed76e8159e7786303587ac71b00e353a7978134d9b4d2e9ee4452aa01b8c047b8473c5bb4cddb92fd598 WHIRLPOOL 4f5917f998380fd8242769acf90acb76af4cd0514b16d9b00f3f896a644cf131061f3c768c5a2eb82e96924f3bffbbb5428b1b2ed6a1d57eebb6c88031244ef5
 DIST ext4magic-0.3.2.tar.gz 426941 SHA256 8d9c6a594f212aecf4eb5410d277caeaea3adc03d35378257dfd017ef20ea115 SHA512 81bc9ba40dc2ea0bfb01bec160a1bbf0bf8a7983241aba34190d3571386f4d7dc63409866737b8d64516a3594eba11c819bbb721a1942c0a675d5675a7bba9a1 WHIRLPOOL 34bb59fa31babb0ac0edf098ed428c0f3a30976ce81edda15c1498e69f5a8d4453e3f7a133bd42dfe30bd11a42561ae8dd653a56e5831a8aaafacc90ba840da0
-EBUILD ext4magic-0.3.0.ebuild 676 SHA256 0e812a9f8e640055bc0e630c35f0f435c30bf423286d6f9dc2f7d36fabe3507f SHA512 1c9a4380e3ead10359c89bb353c7ff012eda4a8fafbb0d571f8233647ae16b32c3e48431efab8f0e2a8d679a7a9dbc560c6da9627f0bf705c84b28a3b58a1b19 WHIRLPOOL 96ff6c48e2b8dcbcf230f87722a8526d20874df4382f45ed91a520af0df48b769a345a181e8d82586adafb35ffb2a4b9dc2897eab93d760e153b9370ead29d4d
-EBUILD ext4magic-0.3.1-r1.ebuild 1001 SHA256 4c600c9874add5b84565e3dcea4d007440c501c453d3ca742bf0b8b33f9d7766 SHA512 df2686ebf6561a642cce06d34cac0cdfae438257fdb56faab934ca1fe1974b8ebfc3da83653cfc08ad65a2c31399ed4d6d151bc17f75184ffda3b91a90c7ccf6 WHIRLPOOL 0b7c9a0f0a6a469b0e54f497806fd41711479b1f62465c6b3fd6af97f21af476830e12ea736d6eea1b8b773bd87f8508a2d84387be62b2db1e6f97924c9c0f7c
 EBUILD ext4magic-0.3.2.ebuild 997 SHA256 580790bec404edbe0780788ee3ac2fa7f05007c383bc6404a5bdffc9ed5ff41c SHA512 3cbe2d86778f80c68f89845079915414572b705da69de553ed9b818ab6608abf67a8a8ceed851c548efac0fc5f87bd72027599f99bba81241bacec4cdde16137 WHIRLPOOL c736072bbab39e647eadd2e1cb8dcf0beae53d7e5c7ddb0da306d2ed02c1121bbec25799a643c78c3af32b4a70d615a0c1b5c6d10f3ad30c1c14f0e915f8533e
-MISC ChangeLog 2209 SHA256 e6748f9a505d5b9f10c5e79f48b355d27ce7e40771605438f2f28702c0a64748 SHA512 f0595887fc6d4b564d3ea84364b9a2849d467f345b880c2e119d16d8e2acfa3cf55b37cb1c7d38b7bb521d1204acb33962e0394faa281a85ec93ea4a44e7a49d WHIRLPOOL 2d1d221d4c66127bcbb00c48d22e592084f25299014a89a6c180a99b67f3a2ab10deb181b4570cd22daa8af770e0330fcc74a23506a4ba7b1047136527938152
+MISC ChangeLog 2331 SHA256 12fc451515d0b9d9ae097567e33d3fe7d223ffc2b9f127c21a7d5c951bef15ad SHA512 0e265f932bab7d77d3da15fb2d0b568c31d39705567cd98133b539c6923fe4c18efa46389314e186edef36f075e39da2a430b623f467d4b50ec00c5317daeec6 WHIRLPOOL dad3a96f5c0d03fcb791c5d09ab275b54c42478da70b9b89bf59fe3a4a8c39ef00aa3370b6038a34ac2d4113ae314a9534c5352bae7159892b02abb19262af1a
 MISC metadata.xml 744 SHA256 aa19d03d458aba378ac03298a514319ee6ebf1804a4c7a3915f7c6ba959aaebd SHA512 1c8f70307bc40247b5fdc95f26393e637e855218e71829dbd73e0ffac34066865d8edca58182dcbbdfa0e661a0fef674ea77c06890f7e78cc0d877e59c47fdfe WHIRLPOOL 3b2e5111572e5b13673a833f63adcdf2563a6eb474f4f047b5526da9cb1dbddc9820a862e831c52e678cd1d55b64b7414dcd6645b49089ac66185ef6b4d79b27
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUN7xRAAoJELp701BxlEWfvAwP/1K7+8PdtM0SmXwGYpha/DUZ
-uLJqP12HQHdl6oHOvqGl0v+BPfvjR2LUB/n+2Q1hVuI91JUdV0dScW3s6dMejmOW
-iqus3uM3axjJpCAWUJEP6RJSB5l3mv2SQ+3yA/cpRtEiEneeiVuAScyX1LLTnFvW
-BrPvJp1eKzEh0ZcNN8paW6sPdUbg01XgA7XNhtr5GpuF3tN/OWvJkAYIdvWUHV2H
-lItzPC/HOfHSPEgmrspJ1agvGukwoWA3SCaWaTjczzpPJD8wYveQ6RleG3INjeXI
-3OSqtwQ5oa15kJoK2Iibtf071PpL+4SZhzEg0QDd7Gax1naaaLH0ftCzodARBX/U
-rFv1JnOrqqtrxA0lYURi19cJ5uFIP0JG1m7LM0X2MlkkDb1PBdjYDglEFOp15AjB
-6xduzXjAsTofbRvKU6XUfZ9lMkJ4xKCvJtXUvn7usd9PKxOfeZPuYRXDMXiTvCpg
-BFzeqpITEMUnQjpQNzHg9kmQ8ALxOGDC3O/gigGlcK+076IxM3orjMt1bXN9q+tH
-wql//3hNaEvpdNrIeHbC/hY1Bdjj/EBKx0LfqOtdR9fFqldXLXNaWYEgzJpToMLL
-y72tCHNb60drYQI4/3iBr3kXDu5JucHAvvPKD1I6I8rDypYZAE0upwjV1VqkDVrE
-nxCy3zDdu3+yenm33x+v
-=Ld6w
+iQEcBAEBCAAGBQJUxlq0AAoJECo/aRed92678FcH/2vaY8D/tsJhgUoNpf6Nif6v
+nrWwdb5N6ECo0NdYtuc/Ffzxwqx3u/s759qTTRhsyiKq8umzSNTGmdu31Ug+5IKe
+/ch8DE5Yt1mxjL9InjWR9znjtX0a7zJSxX1J1nvDJlar+Uwzh5YoQkYIkJfStQ4I
+56OF2kmJT9C81ENR4FsALHeZ36lGZx4Ftj8rxvVzbeAO43RVIxA0EHSSw2Qhl5Dj
+DJJIrtHjbesQdV1jkvOmgFXw67wIceLYdtPXEIGcHcHEj9zFGOxJTAXOX9b8Ro0C
+AQSuYIPYxf8VHVciXJRBAFoiqolXfNP0oFh+E/YZXhnne851wACPumLZN7btAbI=
+=I9/x
 -----END PGP SIGNATURE-----
